--- a/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
+++ b/3D Shader Scopes for GAMMA/gamedata/configs/mod_system_zzzzz_3ds_gamma_snipers.ltx
@@ -482,10 +482,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 15
 		scope_texture                    =
 ![wpn_dvl10_leupold_hud]
-        aim_hud_offset_pos               = -0.071838, 0.005215, -0.089909
-        aim_hud_offset_pos_16x9          = -0.071838, 0.005215, -0.089909
-        aim_hud_offset_rot               = 0.021915, 0.004956, 0
-        aim_hud_offset_rot_16x9          = 0.021915, 0.004956, 0
+        aim_hud_offset_pos               = -0.071838, 0.005215, -0.085436
+        aim_hud_offset_pos_16x9          = -0.071838, 0.005215, -0.085436
+        aim_hud_offset_rot               = 0.021735, 0.004982, 0
+        aim_hud_offset_rot_16x9          = 0.021735, 0.004982, 0
 		
 ![wpn_dvl10_specter]		
         scope_zoom_factor                = 30
@@ -533,7 +533,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.021848, 0.005088, 0
 		
 ![wpn_dvl10_pn23]
-        scope_zoom_factor                = 30
+        scope_zoom_factor                = 20
         scope_texture                    =
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on		
@@ -561,10 +561,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 15
 		scope_texture                    =
 ![wpn_dvl10_m1_leupold_hud]
-        aim_hud_offset_pos               = -0.071838, 0.005215, -0.089909
-        aim_hud_offset_pos_16x9          = -0.071838, 0.005215, -0.089909
-        aim_hud_offset_rot               = 0.021915, 0.004956, 0
-        aim_hud_offset_rot_16x9          = 0.021915, 0.004956, 0
+        aim_hud_offset_pos               = -0.071838, 0.005215, -0.085436
+        aim_hud_offset_pos_16x9          = -0.071838, 0.005215, -0.085436
+        aim_hud_offset_rot               = 0.021735, 0.004982, 0
+        aim_hud_offset_rot_16x9          = 0.021735, 0.004982, 0
 		
 ![wpn_dvl10_m1_specter]		
         scope_zoom_factor                = 30
@@ -613,7 +613,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.021848, 0.005088, 0
 		
 ![wpn_dvl10_m1_pn23]
-        scope_zoom_factor                = 30
+        scope_zoom_factor                = 20
         scope_texture                    =
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on		
@@ -669,19 +669,19 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svd_m1_pso2_hud]
-        aim_hud_offset_pos               = -0.062474, 0.018864, -0.062619
-        aim_hud_offset_pos_16x9          = -0.062474, 0.018864, -0.062619
-        aim_hud_offset_rot               = -0.001471, -0.002049, -0.003
-        aim_hud_offset_rot_16x9          = -0.001471, -0.002049, -0.003
+        aim_hud_offset_pos               = -0.062396, 0.01872, -0.080995
+        aim_hud_offset_pos_16x9          = -0.062396, 0.01872, -0.080995
+        aim_hud_offset_rot               = -0.000998, -0.003295, -0.003
+        aim_hud_offset_rot_16x9          = -0.000998, -0.003295, -0.003
 		
 ![wpn_svd_m1_pso1m21]
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svd_m1_pso1m21_hud]		
-        aim_hud_offset_pos               = -0.062474, 0.018864, -0.062619
-        aim_hud_offset_pos_16x9          = -0.062474, 0.018864, -0.062619
-        aim_hud_offset_rot               = -0.001471, -0.002049, -0.003
-        aim_hud_offset_rot_16x9          = -0.001471, -0.002049, -0.003
+        aim_hud_offset_pos               = -0.062396, 0.01872, -0.080995
+        aim_hud_offset_pos_16x9          = -0.062396, 0.01872, -0.080995
+        aim_hud_offset_rot               = -0.000998, -0.003295, -0.003
+        aim_hud_offset_rot_16x9          = -0.000998, -0.003295, -0.003
 		
 ![wpn_svd_m1_1p78gs]
         scope_zoom_factor                = 42.86
@@ -707,7 +707,6 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =
 		nv_scope_status 				 = 0
-		scope_dynamic_zoom               = on	
 ![wpn_svd_m1_1pn93n2_1gs_hud]
         aim_hud_offset_pos               = -0.060669, 0.008367, -0.045881
         aim_hud_offset_pos_16x9          = -0.060669, 0.008367, -0.045881
@@ -765,19 +764,19 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svds_pso2_hud]
-        aim_hud_offset_pos               = -0.062007, 0.014799, -0.058086
-        aim_hud_offset_pos_16x9          = -0.062007, 0.014799, -0.058086
-        aim_hud_offset_rot               = -0.001003, -0.002288, 0
-        aim_hud_offset_rot_16x9          = -0.001003, -0.002288, 0
+        aim_hud_offset_pos               = -0.062046, 0.014745, -0.077286
+        aim_hud_offset_pos_16x9          = -0.062046, 0.014745, -0.077286
+        aim_hud_offset_rot               = -0.001111, -0.003379, 0
+        aim_hud_offset_rot_16x9          = -0.001111, -0.003379, 0
 		
 ![wpn_svds_pso1m21]
         scope_zoom_factor                = 30
         scope_texture                    =	
 ![wpn_svds_pso1m21_hud]		
-        aim_hud_offset_pos               = -0.062007, 0.014799, -0.058086
-        aim_hud_offset_pos_16x9          = -0.062007, 0.014799, -0.058086
-        aim_hud_offset_rot               = -0.001003, -0.002288, 0
-        aim_hud_offset_rot_16x9          = -0.001003, -0.002288, 0
+        aim_hud_offset_pos               = -0.062046, 0.014745, -0.077286
+        aim_hud_offset_pos_16x9          = -0.062046, 0.014745, -0.077286
+        aim_hud_offset_rot               = -0.001111, -0.003379, 0
+        aim_hud_offset_rot_16x9          = -0.001111, -0.003379, 0
 		
 ![wpn_svds_1p78gs]
         scope_zoom_factor                = 42.86
@@ -802,7 +801,6 @@ lewd_lens_hide_aim_mode      = true, false, false
 ![wpn_svds_1pn93n2_1gs]
         scope_zoom_factor                = 30
         scope_texture                    =
-		scope_dynamic_zoom               = on	
 		nv_scope_status 				 = 0	
 ![wpn_svds_1pn93n2_1gs_hud]
         aim_hud_offset_pos               = -0.059441, 0.00495, -0.042993
@@ -839,10 +837,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_alt_pos           = -0.094524, -0.072042, -0.1
         aim_hud_offset_alt_pos_16x9      = -0.094524, -0.072042, -0.1
 		
-        aim_hud_offset_pos               = -0.074972, 0.003386, -0.098866
-        aim_hud_offset_pos_16x9          = -0.074972, 0.003386, -0.098866
-        aim_hud_offset_rot               = -0.003976, -0.003699, 0
-        aim_hud_offset_rot_16x9          = -0.003976, -0.003699, 0
+        aim_hud_offset_pos               = -0.074972, 0.003386, -0.094316
+        aim_hud_offset_pos_16x9          = -0.074972, 0.003386, -0.094316
+        aim_hud_offset_rot               = -0.004318, -0.003725, 0
+        aim_hud_offset_rot_16x9          = -0.004318, -0.003725, 0
 		
 ![wpn_svds_pmc_specter]		
         scope_zoom_factor                = 30
@@ -892,7 +890,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = -0.004841, -0.004214, 0
 		
 ![wpn_svds_pmc_pn23]
-        scope_zoom_factor                = 30
+        scope_zoom_factor                = 20
         scope_texture                    =
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on		
@@ -952,6 +950,7 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_rot_16x9          = 0.044633, 0.032509, -0.030161
 ;==============================================================================
 ![wpn_svu]
+>scopes                                   = ekp8_02, okp, pka, 1p63, 1p76, pso2, pso1m21, 1pn93n2_1gs, 1pn93, usp1, 1p78gs, 1p59
 lewd_lens_hide_enabled       = true	
 lewd_lens_hide_bone          = scope
 lewd_lens_hide_delays        = 0.1,0
@@ -975,31 +974,184 @@ lewd_lens_hide_aim_mode      = true, false, false
         aim_hud_offset_pos_16x9          = -0.05638, 0.021424, -0.163786
         aim_hud_offset_rot               = 0.0698, 0.033108, -0.018
         aim_hud_offset_rot_16x9          = 0.0698, 0.033108, -0.018
-;==============================================================================		
-![wpn_svu_alt]
-lewd_lens_hide_enabled       = true	
-lewd_lens_hide_bone          = scope
-lewd_lens_hide_delays        = 0.1,0
-lewd_lens_hide_aim_mode      = true, false, false
+;------------------------------------------------------------------------------------------------
+[wpn_svu_ekp8_02]:wpn_svu
+hud					= wpn_svu_ekp8_02_hud
+1icon_layer                              = ekp8_02
+1icon_layer_x                            = 80
+1icon_layer_y                            = 0
 
-![wpn_svu_alt_1p29]
-        scope_zoom_factor                = 30
-        scope_texture                    =	
-![wpn_svu_alt_1p29_hud]
-        aim_hud_offset_pos               = -0.069073, 0.001931, -0.204555
-        aim_hud_offset_pos_16x9          = -0.069073, 0.001931, -0.204555
-        aim_hud_offset_rot               = 0.070937, 0.033261, -0.02
-        aim_hud_offset_rot_16x9          = 0.070937, 0.033261, -0.02
-		
-![wpn_svu_alt_ps01]
-        scope_zoom_factor                = 30
-        scope_texture                    =	
-![wpn_svu_pso1_sk1_hud]
-        aim_hud_offset_pos               = -0.05638, 0.021424, -0.163786
-        aim_hud_offset_pos_16x9          = -0.05638, 0.021424, -0.163786
-        aim_hud_offset_rot               = 0.0698, 0.033108, -0.018
-        aim_hud_offset_rot_16x9          = 0.0698, 0.033108, -0.018
-;==============================================================================		
+inv_weight                               = 4.22
+
+[wpn_svu_ekp8_02_hud]:wpn_svu_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_ekp_hud.ogf
+        aim_hud_offset_pos               = -0.066133, 0.001191, -0.18483
+        aim_hud_offset_pos_16x9          = -0.066133, 0.001191, -0.18483
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_okp]:wpn_svu
+hud					= wpn_svu_okp_hud
+1icon_layer                              = okp
+1icon_layer_x                            = 85
+1icon_layer_y                            = 0
+
+inv_weight                               = 4.22
+
+[wpn_svu_okp_hud]:wpn_svu_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_okp_hud.ogf
+        aim_hud_offset_pos               = -0.062292, 0.022377, -0.204181
+        aim_hud_offset_pos_16x9          = -0.062292, 0.022377, -0.204181
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_1p76]:wpn_svu
+hud				= wpn_svu_1p76_hud
+1icon_layer			    = 1p76
+1icon_layer_x			= 89
+1icon_layer_y			= 2
+
+inv_weight				= 4.25
+
+[wpn_svu_1p76_hud]:wpn_svu_hud
+item_visual                	= anomaly_weapons\wpn_svu\wpn_svu_1p76_hud.ogf
+        aim_hud_offset_pos               = -0.070275, 0.000259, -0.199129
+        aim_hud_offset_pos_16x9          = -0.070275, 0.000259, -0.199129
+        aim_hud_offset_rot               = 0.062453, 0.039738, -0.009458
+        aim_hud_offset_rot_16x9          = 0.062453, 0.039738, -0.009458
+;----------------------------------------------------------------------------------------
+[wpn_svu_1p63]:wpn_svu
+hud				= wpn_svu_1p63_hud
+1icon_layer			    = 1p63
+1icon_layer_x			= 87
+1icon_layer_y			= 0
+
+inv_weight				= 4.23
+
+[wpn_svu_1p63_hud]:wpn_svu_hud
+item_visual                	= anomaly_weapons\wpn_svu\wpn_svu_1p63_hud.ogf
+        aim_hud_offset_pos               = -0.06975, -0.018658, -0.178362
+        aim_hud_offset_pos_16x9          = -0.06975, -0.018658, -0.178362
+;----------------------------------------------------------------------------------------
+[wpn_svu_pka]:wpn_svu
+hud                                      = wpn_svu_pka_hud
+1icon_layer                              = pka
+1icon_layer_x                            = 87
+1icon_layer_y                            = 0
+
+inv_weight                               = 4.24
+
+[wpn_svu_pka_hud]:wpn_svu_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_pka_hud.ogf
+        aim_hud_offset_pos               = -0.056853, 0.019163, -0.18782
+        aim_hud_offset_pos_16x9          = -0.056853, 0.019163, -0.18782
+        aim_hud_offset_rot               = 0.070051, 0.034588, -0.009458
+        aim_hud_offset_rot_16x9          = 0.070051, 0.034588, -0.009458
+;---------------------------------------------------------------------------------------------------
+;------------------------------------------SCOPES---------------------------------------------------
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_1p78gs]:wpn_svu
+hud                                      = wpn_svu_1p78gs_hud
+1icon_layer                              = 1p78gs
+1icon_layer_x                            = 80
+1icon_layer_y                            = -5
+
+inv_weight                               = 4.42
+
+scope_status            = 1
+scope_zoom_factor       = 42.86
+zoom_rotate_time		= 0.25
+
+[wpn_svu_1p78gs_hud]:wpn_svu_hud
+item_visual                              = anomaly_weapons\wpn_svu\wpn_svu_1p78_hud.ogf
+        aim_hud_offset_pos               = -0.066085, 0.011694, -0.211637
+        aim_hud_offset_pos_16x9          = -0.066085, 0.011694, -0.211637
+        aim_hud_offset_rot               = 0.069269, 0.033464, -0.009458
+        aim_hud_offset_rot_16x9          = 0.069269, 0.033464, -0.009458
+;-----------------------------------------------------------------------------------------------------
+[wpn_svu_1pn93n2_1gs]:wpn_svu
+hud					= wpn_svu_1pn93n2_1gs_hud
+1icon_layer                              = 1pn93n2_1gs
+1icon_layer_x                            = 55
+1icon_layer_y                            = -5
+
+scope_status            = 1
+scope_zoom_factor       = 30
+zoom_rotate_time		= 0.25
+
+inv_weight                               = 4.85
+
+[wpn_svu_1pn93n2_1gs_hud]:wpn_svu_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_1pn93n2_hud.ogf
+        aim_hud_offset_pos               = -0.051524, 0.009782, -0.193933
+        aim_hud_offset_pos_16x9          = -0.051524, 0.009782, -0.193933
+        aim_hud_offset_rot               = 0.0697, 0.03367, -0.009458
+        aim_hud_offset_rot_16x9          = 0.0697, 0.03367, -0.009458
+;---------------------------------------------------------------------------------------------
+[wpn_svu_1pn93]:wpn_svu
+hud				= wpn_svu_1pn93_hud
+1icon_layer			    = 1pn93
+1icon_layer_x			= 55
+1icon_layer_y			= -5
+
+inv_weight			= 4.73
+
+scope_status            = 1
+scope_zoom_factor       = 30
+zoom_rotate_time		= 0.25
+scope_dynamic_zoom		= on
+
+[wpn_svu_1pn93_hud]:wpn_svu_hud
+item_visual                	= anomaly_weapons\wpn_svu\wpn_svu_1pn93_hud.ogf
+        aim_hud_offset_pos               = -0.055303, 0.001823, -0.197205
+        aim_hud_offset_pos_16x9          = -0.055303, 0.001823, -0.197205
+        aim_hud_offset_rot               = 0.069411, 0.033456, -0.009458
+        aim_hud_offset_rot_16x9          = 0.069411, 0.033456, -0.009458	
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_pso2]:wpn_svu
+hud                                      = wpn_svu_pso2_hud
+
+1icon_layer                              = pso2
+1icon_layer_x                            = 55
+1icon_layer_y                            = 0
+
+inv_weight                               = 4.45
+
+scope_status            = 1
+scope_zoom_factor       = 30
+zoom_rotate_time		= 0.25
+
+[wpn_svu_pso2_hud]:wpn_svu_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_pso2_hud.ogf
+        aim_hud_offset_pos               = -0.053915, 0.020439, -0.18284
+        aim_hud_offset_pos_16x9          = -0.053915, 0.020439, -0.18284
+        aim_hud_offset_rot               = 0.070029, 0.031872, -0.009458
+        aim_hud_offset_rot_16x9          = 0.070029, 0.031872, -0.009458
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_1p59]:wpn_svu
+hud                                      = wpn_svu_1p59_hud
+
+1icon_layer                              = 1p59
+1icon_layer_x                            = 92
+1icon_layer_y                            = 0
+
+inv_weight                               = 4.75
+
+scope_status            = 1
+scope_zoom_factor       = 12
+min_scope_zoom_factor	= 45	
+zoom_rotate_time		= 0.25
+scope_dynamic_zoom		= on
+
+[wpn_svu_1p59_hud]:wpn_svu_hud
+item_visual                		= anomaly_weapons\wpn_svu\wpn_svu_1p59_hud.ogf
+	    aim_hud_offset_pos               = -0.051835, 0.011632, -0.221813
+        aim_hud_offset_pos_16x9          = -0.051835, 0.011632, -0.221813
+        aim_hud_offset_rot               = 0.068839, 0.033657, -0.009458
+        aim_hud_offset_rot_16x9          = 0.068839, 0.033657, -0.009458	
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_pso1m21]:wpn_svu_pso2	
+1icon_layer			    = pso1m21			
+;---------------------------------------------------------------------------------------------------
+[wpn_svu_usp1]:wpn_svu_1p29
+1icon_layer			    = usp1	
+;==============================================================================	
 ![wpn_svu_nimble]
 lewd_lens_hide_enabled       = true	
 lewd_lens_hide_bone          = scope
@@ -1096,10 +1248,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_sks_molot_pso2_hud]
-        aim_hud_offset_pos               = -0.04932, 0.002751, -0.034839
-        aim_hud_offset_pos_16x9          = -0.04932, 0.002751, -0.034839
-        aim_hud_offset_rot               = -0.006795, -0.003299, -0.005
-        aim_hud_offset_rot_16x9          = -0.006795, -0.003299, -0.005
+        aim_hud_offset_pos               = -0.04932, 0.002661, -0.052691
+        aim_hud_offset_pos_16x9          = -0.04932, 0.002661, -0.052691
+        aim_hud_offset_rot               = -0.006921, -0.004787, -0.005
+        aim_hud_offset_rot_16x9          = -0.006921, -0.004787, -0.005
 		
 ![wpn_sks_molot_pka]
 		scope_status                     = 1
@@ -1107,8 +1259,8 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 120
 		nv_scope_status 				 = 0	
 ![wpn_sks_molot_pka_hud]		
-        aim_hud_offset_pos               = -0.052257, -0.000847, -0.07932
-        aim_hud_offset_pos_16x9          = -0.052257, -0.000847, -0.07932
+        aim_hud_offset_pos               = -0.052517, -0.000811, -0.051305
+        aim_hud_offset_pos_16x9          = -0.052517, -0.000811, -0.051305
         aim_hud_offset_rot               = -0.006017, -0.002819, -0.005
         aim_hud_offset_rot_16x9          = -0.006017, -0.002819, -0.005
 		
@@ -1136,7 +1288,6 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =
 		nv_scope_status 				 = 0
-		scope_dynamic_zoom               = on	
 ![wpn_sks_molot_1pn93n2_1gs_hud]		
         aim_hud_offset_pos               = -0.046572, -0.006941, -0.073795
         aim_hud_offset_pos_16x9          = -0.046572, -0.006941, -0.073795
@@ -1147,10 +1298,10 @@ lewd_lens_hide_aim_mode      = true, false, false
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_sks_molot_pso1m21_hud]
-        aim_hud_offset_pos               = -0.04932, 0.002751, -0.034839
-        aim_hud_offset_pos_16x9          = -0.04932, 0.002751, -0.034839
-        aim_hud_offset_rot               = -0.006795, -0.003299, -0.005
-        aim_hud_offset_rot_16x9          = -0.006795, -0.003299, -0.005
+        aim_hud_offset_pos               = -0.04932, 0.002661, -0.052691
+        aim_hud_offset_pos_16x9          = -0.04932, 0.002661, -0.052691
+        aim_hud_offset_rot               = -0.006921, -0.004787, -0.005
+        aim_hud_offset_rot_16x9          = -0.006921, -0.004787, -0.005
 		
 ![wpn_sks_molot_usp1]
         scope_zoom_factor                = 30
@@ -1200,10 +1351,10 @@ item_visual                		= dynamics\weapons\wpn_sks_tac\wpn_sks_tac_pso_hud.
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_sks_tac_pso2_hud]
-        aim_hud_offset_pos               = -0.049119, 0.003053, -0.032063
-        aim_hud_offset_pos_16x9          = -0.049119, 0.003053, -0.032063
-        aim_hud_offset_rot               = -0.004951, -0.003764, -0.005
-        aim_hud_offset_rot_16x9          = -0.004951, -0.003764, -0.005
+        aim_hud_offset_pos               = -0.049106, 0.002945, -0.053101
+        aim_hud_offset_pos_16x9          = -0.049106, 0.002945, -0.053101
+        aim_hud_offset_rot               = -0.005041, -0.005068, -0.005
+        aim_hud_offset_rot_16x9          = -0.005041, -0.005068, -0.005
 		
 ![wpn_sks_tac_pka]
 		scope_status                     = 1
@@ -1211,8 +1362,8 @@ item_visual                		= dynamics\weapons\wpn_sks_tac\wpn_sks_tac_pso_hud.
         scope_zoom_factor                = 120
         scope_texture                    =		
 ![wpn_sks_tac_pka_hud]		
-        aim_hud_offset_pos               = -0.053164, -0.00557, -0.055508
-        aim_hud_offset_pos_16x9          = -0.053164, -0.00557, -0.055508
+        aim_hud_offset_pos               = -0.053164, -0.00557, -0.031907
+        aim_hud_offset_pos_16x9          = -0.053164, -0.00557, -0.031907
         aim_hud_offset_rot               = -0.003366, -0.003259, -0.005
         aim_hud_offset_rot_16x9          = -0.003366, -0.003259, -0.005
 		
@@ -1240,7 +1391,6 @@ item_visual                		= dynamics\weapons\wpn_sks_tac\wpn_sks_tac_pso_hud.
         scope_zoom_factor                = 30
         scope_texture                    =
 		nv_scope_status 				 = 0
-		scope_dynamic_zoom               = on	
 ![wpn_sks_tac_1pn93n2_1gs_hud]		
         aim_hud_offset_pos               = -0.046373, -0.00655, -0.072951
         aim_hud_offset_pos_16x9          = -0.046373, -0.00655, -0.072951
@@ -1251,10 +1401,10 @@ item_visual                		= dynamics\weapons\wpn_sks_tac\wpn_sks_tac_pso_hud.
         scope_zoom_factor                = 30
         scope_texture                    =
 ![wpn_sks_tac_pso1m21_hud]
-        aim_hud_offset_pos               = -0.049119, 0.003053, -0.032063
-        aim_hud_offset_pos_16x9          = -0.049119, 0.003053, -0.032063
-        aim_hud_offset_rot               = -0.004951, -0.003764, -0.005
-        aim_hud_offset_rot_16x9          = -0.004951, -0.003764, -0.005
+        aim_hud_offset_pos               = -0.049106, 0.002945, -0.053101
+        aim_hud_offset_pos_16x9          = -0.049106, 0.002945, -0.053101
+        aim_hud_offset_rot               = -0.005041, -0.005068, -0.005
+        aim_hud_offset_rot_16x9          = -0.005041, -0.005068, -0.005
 		
 ![wpn_sks_tac_usp1]
         scope_zoom_factor                = 30
@@ -1335,13 +1485,13 @@ zoom_step_count=1
         scope_zoom_factor                = 15
 		scope_texture                    =
 ![wpn_sr25_leupold_hud]
-        aim_hud_offset_pos               = -0.060921, -0.001241, -0.005327
-        aim_hud_offset_pos_16x9          = -0.060921, -0.001241, -0.005327
-        aim_hud_offset_rot               = -0.004113, -0.029821, 0
-        aim_hud_offset_rot_16x9          = -0.004113, -0.029821, 0
+        aim_hud_offset_pos               = -0.060921, -0.001241, -0.000425
+        aim_hud_offset_pos_16x9          = -0.060921, -0.001241, -0.000425
+        aim_hud_offset_rot               = -0.004509, -0.029847, 0
+        aim_hud_offset_rot_16x9          = -0.004509, -0.029847, 0
 		
 ![wpn_sr25_pn23]
-        scope_zoom_factor                = 30
+        scope_zoom_factor                = 20
         scope_texture                    =
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on
@@ -1451,20 +1601,20 @@ zoom_step_count=1
 		scope_texture                    =
 		scope_dynamic_zoom               = on
 ![wpn_marlin_tracker_leupold_hud]
-        aim_hud_offset_pos               = -0.053232, -0.011652, -0.088274
-        aim_hud_offset_pos_16x9          = -0.053232, -0.011652, -0.088274
-        aim_hud_offset_rot               = 0.020841, 0.011442, 0.00782
-        aim_hud_offset_rot_16x9          = 0.020841, 0.011442, 0.00782
+        aim_hud_offset_pos               = -0.053232, -0.011652, -0.082869
+        aim_hud_offset_pos_16x9          = -0.053232, -0.011652, -0.082869
+        aim_hud_offset_rot               = 0.020661, 0.011298, 0.00782
+        aim_hud_offset_rot_16x9          = 0.020661, 0.011298, 0.00782
 		
 ![wpn_marlin_tracker_mark8_rmr]
         scope_zoom_factor                = 15
 		scope_texture                    =
 		scope_dynamic_zoom               = on
 ![wpn_marlin_tracker_mark8_rmr_hud]
-        aim_hud_offset_pos               = -0.053232, -0.011652, -0.088274
-        aim_hud_offset_pos_16x9          = -0.053232, -0.011652, -0.088274
-        aim_hud_offset_rot               = 0.020841, 0.011442, 0.00782
-        aim_hud_offset_rot_16x9          = 0.020841, 0.011442, 0.00782
+        aim_hud_offset_pos               = -0.053232, -0.011652, -0.082869
+        aim_hud_offset_pos_16x9          = -0.053232, -0.011652, -0.082869
+        aim_hud_offset_rot               = 0.020661, 0.011298, 0.00782
+        aim_hud_offset_rot_16x9          = 0.020661, 0.011298, 0.00782
 		
         aim_hud_offset_alt_pos           = -0.088507, -0.034646, 0.019766
         aim_hud_offset_alt_pos_16x9      = -0.088507, -0.034646, 0.019766
@@ -1472,7 +1622,7 @@ zoom_step_count=1
         aim_hud_offset_alt_rot_16x9      = 0.008105, 0.02245, 0.39801
 		
 ![wpn_marlin_tracker_pn23]
-        scope_zoom_factor                = 30
+        scope_zoom_factor                = 20
         scope_texture                    =
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on
@@ -1619,20 +1769,20 @@ zoom_step_count=1
 		scope_texture                    =
 		scope_dynamic_zoom               = on
 ![wpn_mjolnir_leupold_hud]
-        aim_hud_offset_pos               = -0.061243, 0.009842, -0.065188
-        aim_hud_offset_pos_16x9          = -0.061243, 0.009842, -0.065188
-        aim_hud_offset_rot               = 0.004519, -0.003665, 0
-        aim_hud_offset_rot_16x9          = 0.004519, -0.003665, 0
+        aim_hud_offset_pos               = -0.061243, 0.009842, -0.061062
+        aim_hud_offset_pos_16x9          = -0.061243, 0.009842, -0.061062
+        aim_hud_offset_rot               = 0.004285, -0.003808, 0
+        aim_hud_offset_rot_16x9          = 0.004285, -0.003808, 0
 		
 ![wpn_mjolnir_mark8_rmr]
         scope_zoom_factor                = 15
 		scope_texture                    =
 		scope_dynamic_zoom               = on
 ![wpn_mjolnir_mark8_rmr_hud]
-        aim_hud_offset_pos               = -0.061243, 0.009842, -0.065188
-        aim_hud_offset_pos_16x9          = -0.061243, 0.009842, -0.065188
-        aim_hud_offset_rot               = 0.004519, -0.003665, 0
-        aim_hud_offset_rot_16x9          = 0.004519, -0.003665, 0
+        aim_hud_offset_pos               = -0.061243, 0.009842, -0.061062
+        aim_hud_offset_pos_16x9          = -0.061243, 0.009842, -0.061062
+        aim_hud_offset_rot               = 0.004285, -0.003808, 0
+        aim_hud_offset_rot_16x9          = 0.004285, -0.003808, 0
 		
         aim_hud_offset_alt_pos           = -0.080862, -0.050206, -0.052342
         aim_hud_offset_alt_pos_16x9      = -0.080862, -0.050206, -0.052342
@@ -1640,7 +1790,7 @@ zoom_step_count=1
         aim_hud_offset_alt_rot_16x9      = -0.01093, -0.001433, 0.77
 		
 ![wpn_mjolnir_pn23]
-        scope_zoom_factor                = 30
+        scope_zoom_factor                = 20
         scope_texture                    =
 		nv_scope_status 				 = 0
 		scope_dynamic_zoom               = on
